# cpptemplate

./: CMakeLists.txt
include/: build.hpp.in
src/: main.cpp
test/: CMakeLists.txt  test.cpp
